--- a/api-gateway-for-quiz-app/src/main/resources/application.properties
+++ b/api-gateway-for-quiz-app/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 server.port=8080
 spring.application.name=api-gateway-for-quiz-app
 
+# Eureka Discovery
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-# Enable service discovery based routing
+# Enable dynamic routing from Eureka
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
@@ -15,3 +16,6 @@ spring.cloud.gateway.routes[0].predicates[0]=Path=/questions/**
 spring.cloud.gateway.routes[1].id=quiz-route
 spring.cloud.gateway.routes[1].uri=lb://quiz-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/quiz/**
+
+# Actuator (optional but useful)
+management.endpoints.web.exposure.include=health,info,mappings
