--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,5 +1,13 @@
+
 server.port=8888
 spring.application.name=config-server
 
-spring.cloud.config.server.native.search-locations=classpath:/config, file:./config-repo
+
 spring.profiles.active=native
+spring.cloud.config.server.native.search-locations=classpath:/config
+
+
+eureka.client.enabled=false
+
+
+management.endpoints.web.exposure.include=health,info,mappings
