--- a/eureka-service-repository/src/main/resources/application.properties
+++ b/eureka-service-repository/src/main/resources/application.properties
@@ -3,8 +3,6 @@ server.port=8761
 
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-spring.cloud.discovery.enabled=false
 
-
-
+management.endpoints.web.exposure.include=health,info,mappings
 
