modified appplication.yml files

--- a/api-gateway-for-quiz-app/src/main/resources/application.properties
+++ b/api-gateway-for-quiz-app/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8080
 spring.application.name=api-gateway-for-quiz-app
 
-# Eureka Discovery
+# Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-# Enable dynamic routing from Eureka
+# Discovery locator enabled
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
@@ -17,5 +17,4 @@ spring.cloud.gateway.routes[1].id=quiz-route
 spring.cloud.gateway.routes[1].uri=lb://quiz-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/quiz/**
 
-# Actuator (optional but useful)
 management.endpoints.web.exposure.include=health,info,mappings
