--- a/config-server/src/main/resources/config/api-gateway-for-quiz-app.yml
+++ b/config-server/src/main/resources/config/api-gateway-for-quiz-app.yml
@@ -1,8 +1,20 @@
 server:
   port: 8080
+
 spring:
   application:
-    name: api-gateway-for-quiz-app
+    name: api-gateway
+
+  cloud:
+    gateway:
+      routes:
+        - id: quiz-service
+          uri: lb://quiz-service
+          predicates:
+            - Path=/quiz/**
+          filters:
+            - StripPrefix=1
+
 eureka:
   client:
     service-url:
